2010-02-05  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/vector.spad.pamphlet: add missing operations for
	DirectProductCategory when Finite

2010-02-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/listgcd.spad.pamphlet,
	src/algebra/pgcd.spad.pamphlet,
	src/algebra/u32vec.spad.pamphlet,
	src/algebra/poly.spad.pamphlet,
	src/interp/primitives.lisp: Faster polynomial gcd.

2010-02-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/modhpsol.spad.pamphlet:
	naiveBeckermannLabahnMultipoint(): Add sanity test.

2010-02-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* Makefile.in: Correct typo.

2010-02-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-funsel.boot: constructSubst(): Make more
	efficient by using prebuild argument markers.

2010-01-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/float.spad.pamphlet: Compute e faster.

>>>>>>> .r797
2010-01-30  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/unittest.spad.pamphlet: cleanup, report unexpected
	passes.

	* src/input/mantepse.input.pamphlet: add another test exhibiting a
	wrong simplification in RECOP.

2010-01-29  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/input/mantepse.input.pamphlet: add tests for guessing over
	prime field.

	* src/algebra/ssolve.spad.pamphlet: correct types in testcases and
	add another test.

2010-01-28   Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/taylor.spad.pamphlet: revert(): Handle
	series with coefficient of 'x' not equal to 1.

2010-01-28   Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/catdef.spad.pamphlet,
	src/algebra/naalgc.spad.pamphlet,
	src/algebra/opalg.spad.pamphlet,
	src/algebra/trigcat.spad.pamphlet: Remove commented out code.

2010-01-28   Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Avoid too long argument lists when concatenating strings.
	* src/interp/macros.lisp: replaceString(): New function.
	src/interp/g-util.boot: concatenateStringList(): New