@@ -1,7 +1,12 @@
+2010-02-07  Martin Rubey  <martin.rubey@univie.ac.at>
+
+	* src/input/finite.input.pamphlet: new testsuite testing that
+	lookup and index are inverses in domains with Finite.
+
 2010-02-05  Martin Rubey  <martin.rubey@univie.ac.at>
 
 	* src/algebra/vector.spad.pamphlet: add missing operations for
-	DirectProductCategory when Finite
+	DirectProductCategory when Finite.
 
 2010-02-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
@@ -29,7 +34,6 @@
 
 	* src/algebra/float.spad.pamphlet: Compute e faster.
 
->>>>>>> .r797
 2010-01-30  Martin Rubey  <martin.rubey@univie.ac.at>
 
 	* src/algebra/unittest.spad.pamphlet: cleanup, report unexpected
